--- a/dev/sass/_generales.scss
+++ b/dev/sass/_generales.scss
@@ -94,7 +94,12 @@ input{
     top: 50%;
     left: 50%;
 }
-
+.iconSection {
+	width: 50px;
+    display: block;
+    margin: 18px auto 0;
+    height: 50px;
+}
 
 .cBlanco{
 	color: #fff;
