--- a/dev/sass/popups/popups.scss
+++ b/dev/sass/popups/popups.scss
@@ -66,6 +66,7 @@
     img {
       width: 100%;
       vertical-align: middle;
-      display: inline-block;
+	  display: inline-block;
+	  max-width: 677px;
     }
   }
